test/testdata/list/invalid_binary_op_error.lox
["a"] - ["b"]; // error: '-' operator cannot be used with types 'list' and 'list'
